version-3.2.0

SIGNIFICANT USER-VISIBLE CHANGES
  - Use new Newflow template
  - Update all tool versions
  - Duplicates are now calculed over mapped reads using all duplicate types (single, pair, optical)

BUG FIXES
  - Fix bug when --stranded is set on command line (#120)

DEPRECATED
  - Tophat2 is no longer supported. `--tophat2_index` is now deprecated and `--aligner` has been updated.
  - option `--markdup_java_options` is deprecated. The Java memory is calculated
    from the process memomry

**************************************
version-3.1.7

NEW FEATURES
  - Add Rhopalosiphum_padi/v2 annotation

BUG FIXES
  - Remove null values in WorkflowOnComplete

*************************************
version-3.1.6

NEW FEATURES
  - Add Acyrthosiphon_pisum/Acyr2.0 genome annotation

BUG FIXES
  - Increase preseq memory limites (#73)

*************************************
version-3.1.5

BUG FIXES
  - Fix bug in skip_expan (#71)

*************************************
version-3.1.4

BUG FIXES
 - Fix bug in report when bed12 is not available and stranded='auto' (#112)
 - Fix bug in report #116
 - Fix bug in Mouse mm10 annotation
 - Update in gene type information (#113)

*************************************
version-3.1.3

NEW FEATURES
  - update Bmori annotation (BmoriV3, BmoriV3_base, BmoriV4_base)
  - Add Human hg38 base reference genome
  - Add Plasmodium falciparum 3D7 reference genome

*************************************
version-3.1.2

BUG FIXES
  - Update STAR option for s288c, sacCer2 and sacCer 3 (#58)
  - Fix bug in genome.conf (#57)
  - Fix number format in main table

*************************************
version-3.1.1

BUG FIXES
  - Change output name of the multiQC report
  - Fix bug in STAR counts publishdir (#108)
  - Remove regexpr on run name (#109)
  - Fix minor bugs in report (#104)

*************************************
version-3.1.0

NEW FEATURES
  - Bump stable version 3.1.0

*************************************
version-3.0.3

NEW FEATURES