@@ -22,6 +22,7 @@ process {
   withLabel:dupradar { container = "dupradar" }
   withLabel:featurecounts { container = "featureCounts" }
   withLabel:htseq { container = "htseq" }
+  withLabel:deeptools { container = "deeptools" }
   withLabel:unix { container = "unix" }
   withLabel:multiqc { container = "multiqc" }
 }
