@@ -21,6 +21,7 @@ process {
   withLabel:dupradar { conda = "${params.geniac.tools.dupradar}" }
   withLabel:featureCounts { conda = "${params.geniac.tools.featureCounts}" }
   withLabel:htseq { conda = "${params.geniac.tools.htseq}" }
+  withLabel:deeptools { conda = "${params.geniac.tools.deeptools}" } 
   withLabel:unix { conda = "${params.geniac.tools.unix}" }
   withLabel:multiqc { conda = "${params.geniac.tools.multiqc}" }
 }
