@@ -37,6 +37,7 @@ process {
   withLabel:dupradar { beforeScript = "export PATH=${params.geniac.multiPath}/dupradar/bin:$PATH" }
   withLabel:featurecounts { beforeScript = "export PATH=${params.geniac.multiPath}/featurecounts/bin:$PATH" }
   withLabel:htseq { beforeScript = "export PATH=${params.geniac.multiPath}/htseq/bin:$PATH" }
+  withLabel:deeptools { beforeScript = "export PATH=${params.geniac.multiPath}/deeptools/bin:$PATH" }
   withLabel:unix { beforeScript = "export PATH=${params.geniac.multiPath}/unix/bin:$PATH" }
   withLabel:multiqc { beforeScript = "export PATH=${params.geniac.multiPath}/multiqc/bin:$PATH" }
 }
