@@ -34,6 +34,7 @@ process {
   withLabel:dupradar { container = "${params.geniac.singularityImagePath}/dupradar.simg" }
   withLabel:featurecounts { container = "${params.geniac.singularityImagePath}/featurecounts.simg" }
   withLabel:htseq { container = "${params.geniac.singularityImagePath}/htseq.simg" }
+  withLabel:deeptools { container = "${params.geniac.singularityImagePath}/deeptools.simg" } 
   withLabel:unix { container = "${params.geniac.singularityImagePath}/unix.simg" }
   withLabel:multiqc { container = "${params.geniac.singularityImagePath}/multiqc.simg" }
 }
