@@ -20,6 +20,7 @@ dependencies:
   - bioconda::rseqc=4.0.0
   - bioconda::subread=2.0.1
   - bioconda::htseq=0.12.4
+  - bioconda::deeptools=3.5.0=py_0
 
 # R-packages
   - r-base=4.0.3
