@@ -89,6 +89,7 @@ params {
   skipSaturation = false
   skipDupradar = false
   skipExpan = false
+  skipBigwig = false
   skipMultiQC = false
   skipGenebodyCoverage = false
   skipSoftVersions = false
