@@ -1,5 +1,8 @@
 version-3.2.0
 
+NEW FEATURES:
+  - Generate bigwig files
+
 SIGNIFICANT USER-VISIBLE CHANGES
   - Use new Newflow template
   - Update all tool versions
